--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             });
 
             console.log(result);
+            $("#result").text(result);
         }
 
         function load(poem) {
@@ -192,9 +193,11 @@
 
         </div>
 
-        <div>
+        <div class="text-center">
             <input type="button" value="บันทึก" onclick="save()" />
         </div>
+
+        <pre id="result"></pre>
 
 
     </div>
