remove section button

--- a/index.html
+++ b/index.html
@@ -108,106 +108,119 @@
 
         <!-- part 2 -->
         <div id="part-2" class="d-none">
-            <div class="row section-separator"></div>
-            <div class="k-section">
-                <div class="row k-row">
 
-                    <div class="k-col col-1 "><input class="k-input j-3 k-new-line k-first" type="text" /></div>
-                    <div class="k-col col-1 "><input class="k-input j-3" type="text" /></div>
-                    <div class="k-col col-1 "><input class="k-input j-3" type="text" /></div>
-                    <div class="k-col col-1 k-1 k-12"><input class="k-input" type="text" /></div>
-                    <div class="k-col col-1 k-2 k-12"><input class="k-input" type="text" /></div>
+            <div>
+                <div class="row section-separator"></div>
+                <div class="k-section">
+                    <div class="row k-row">
 
-                    <!-- space -->
-                    <div class="col-1"></div>
-                    <div class="col-1"></div>
+                        <div class="k-col col-1 "><input class="k-input j-3 k-new-line k-first" type="text" /></div>
+                        <div class="k-col col-1 "><input class="k-input j-3" type="text" /></div>
+                        <div class="k-col col-1 "><input class="k-input j-3" type="text" /></div>
+                        <div class="k-col col-1 k-1 k-12"><input class="k-input" type="text" /></div>
+                        <div class="k-col col-1 k-2 k-12"><input class="k-input" type="text" /></div>
 
-                    <div class="k-col col-1 "><input class="k-input k-space-2" type="text" /></div>
-                    <div class="k-col col-1 "><input class="k-input j-1" type="text" /></div>
-                    <!-- space -->
-                    <!-- <div class="k-col col-1"></div> -->
-                    <div class="k-col col-1 ml-4"><input class="k-input k-alt k-space k-12" type="text" /></div>
-                    <div class="k-col col-1 "><input class="k-input k-alt k-12" type="text" /></div>
+                        <!-- space -->
+                        <div class="col-1"></div>
+                        <div class="col-1"></div>
 
+                        <div class="k-col col-1 "><input class="k-input k-space-2" type="text" /></div>
+                        <div class="k-col col-1 "><input class="k-input j-1" type="text" /></div>
+                        <!-- space -->
+                        <!-- <div class="k-col col-1"></div> -->
+                        <div class="k-col col-1 ml-4"><input class="k-input k-alt k-space k-12" type="text" /></div>
+                        <div class="k-col col-1 "><input class="k-input k-alt k-12" type="text" /></div>
+
+
+                    </div>
+
+                    <div class="row k-row">
+
+                        <div class="k-col col-1 "><input class="k-input k-new-line" type="text" /></div>
+                        <div class="k-col col-1 k-1 "><input class="k-input" type="text" /></div>
+                        <div class="k-col col-1 "><input class="k-input" type="text" /></div>
+                        <div class="k-col col-1"><input class="k-input" type="text" /></div>
+                        <div class="k-col col-1"><input class="k-input j-1" type="text" /></div>
+
+                        <!-- space -->
+                        <div class="col-1"></div>
+                        <div class="col-1"></div>
+
+                        <div class="k-col col-1 k-1 k-12"><input class="k-input k-space-2" type="text" /></div>
+                        <div class="k-col col-1 k-2 k-12"><input class="k-input j-2" type="text" /></div>
+
+
+                    </div>
+
+                    <div class="row k-row">
+
+                        <div class="k-col col-1 "><input class="k-input k-new-line" type="text" /></div>
+                        <div class="k-col col-1 "><input class="k-input" type="text" /></div>
+                        <div class="k-col col-1 k-1"><input class="k-input" type="text" /></div>
+                        <div class="k-col col-1"><input class="k-input" type="text" /></div>
+                        <div class="k-col col-1"><input class="k-input j-1" type="text" /></div>
+
+                        <!-- space -->
+                        <div class="col-1"></div>
+                        <div class="col-1"></div>
+
+                        <div class="k-col col-1 "><input class="k-input k-space-2" type="text" /></div>
+                        <div class="k-col col-1 k-1"><input class="k-input" type="text" /></div>
+                        <!-- space -->
+                        <!-- <div class="k-col col-1"></div> -->
+                        <div class="k-col col-1 ml-4"><input class="k-input k-alt k-space k-12" type="text" /></div>
+                        <div class="k-col col-1 "><input class="k-input k-alt k-12" type="text" /></div>
+
+
+                    </div>
+
+
+                    <div class="row k-row">
+
+                        <div class="k-col col-1 "><input class="k-input k-new-line" type="text" /></div>
+                        <div class="k-col col-1 k-1 "><input class="k-input" type="text" /></div>
+                        <div class="k-col col-1 "><input class="k-input" type="text" /></div>
+                        <div class="k-col col-1"><input class="k-input" type="text" /></div>
+                        <div class="k-col col-1 k-2"><input class="k-input j-2" type="text" /></div>
+
+                        <!-- space -->
+                        <div class="col-1"></div>
+                        <div class="col-1"></div>
+
+                        <div class="k-col col-1 k-1 k-12"><input class="k-input k-space-2" type="text" /></div>
+                        <div class="k-col col-1 k-2 k-12"><input class="k-input j-3-input" type="text" /></div>
+                        <!-- space -->
+                        <!-- <div class="k-col col-1"></div> -->
+                        <!-- <div class="k-col col-1 "><input class="k-input k-space" type="text" /></div> -->
+                        <div class="k-col col-1 "><input class="k-input" type="text" /></div>
+                        <div class="k-col col-1"><input class="k-input j-3-input k-last" type="text" /></div>
+                        <div class="k-col col-1 text-right">
+                            <input type="button" class="button-red h-100" value="-" onclick="remove(this)"
+                                title="ลบบทนี้" />
+                        </div>
+
+
+                    </div>
 
                 </div>
-
-                <div class="row k-row">
-
-                    <div class="k-col col-1 "><input class="k-input k-new-line" type="text" /></div>
-                    <div class="k-col col-1 k-1 "><input class="k-input" type="text" /></div>
-                    <div class="k-col col-1 "><input class="k-input" type="text" /></div>
-                    <div class="k-col col-1"><input class="k-input" type="text" /></div>
-                    <div class="k-col col-1"><input class="k-input j-1" type="text" /></div>
-
-                    <!-- space -->
-                    <div class="col-1"></div>
-                    <div class="col-1"></div>
-
-                    <div class="k-col col-1 k-1 k-12"><input class="k-input k-space-2" type="text" /></div>
-                    <div class="k-col col-1 k-2 k-12"><input class="k-input j-2" type="text" /></div>
-
-
-                </div>
-
-                <div class="row k-row">
-
-                    <div class="k-col col-1 "><input class="k-input k-new-line" type="text" /></div>
-                    <div class="k-col col-1 "><input class="k-input" type="text" /></div>
-                    <div class="k-col col-1 k-1"><input class="k-input" type="text" /></div>
-                    <div class="k-col col-1"><input class="k-input" type="text" /></div>
-                    <div class="k-col col-1"><input class="k-input j-1" type="text" /></div>
-
-                    <!-- space -->
-                    <div class="col-1"></div>
-                    <div class="col-1"></div>
-
-                    <div class="k-col col-1 "><input class="k-input k-space-2" type="text" /></div>
-                    <div class="k-col col-1 k-1"><input class="k-input" type="text" /></div>
-                    <!-- space -->
-                    <!-- <div class="k-col col-1"></div> -->
-                    <div class="k-col col-1 ml-4"><input class="k-input k-alt k-space k-12" type="text" /></div>
-                    <div class="k-col col-1 "><input class="k-input k-alt k-12" type="text" /></div>
-
-
-                </div>
-
-
-                <div class="row k-row">
-
-                    <div class="k-col col-1 "><input class="k-input k-new-line" type="text" /></div>
-                    <div class="k-col col-1 k-1 "><input class="k-input" type="text" /></div>
-                    <div class="k-col col-1 "><input class="k-input" type="text" /></div>
-                    <div class="k-col col-1"><input class="k-input" type="text" /></div>
-                    <div class="k-col col-1 k-2"><input class="k-input j-2" type="text" /></div>
-
-                    <!-- space -->
-                    <div class="col-1"></div>
-                    <div class="col-1"></div>
-
-                    <div class="k-col col-1 k-1 k-12"><input class="k-input k-space-2" type="text" /></div>
-                    <div class="k-col col-1 k-2 k-12"><input class="k-input j-3-input" type="text" /></div>
-                    <!-- space -->
-                    <!-- <div class="k-col col-1"></div> -->
-                    <!-- <div class="k-col col-1 "><input class="k-input k-space" type="text" /></div> -->
-                    <div class="k-col col-1 "><input class="k-input" type="text" /></div>
-                    <div class="k-col col-1"><input class="k-input j-3-input k-last" type="text" /></div>
-
-
-                </div>
-
             </div>
         </div>
 
-        <div class="text-center">
-            <input type="button" class="button" value="เพิ่มบท" onclick="add()" />
-            <input type="button" class="button" value="จบ" onclick="save()" />
-        </div>
+        <div class="row section-separator"></div>
 
         <pre id="result"></pre>
 
+        <div class="row pt-3">
+            <div class="col-12 no-padding text-center">
+                <input type="button" class="button" value="จบ" onclick="save()" />
+                <input type="button" class="button-alt button-green" value="+" onclick="add()" title="เพิ่มบท" />
+            </div>
+        </div>
+
+
+
         <div id="remark">
-            <div class="row section-separator"></div>
+
 
             <div class="pt-4"><u>หมายเหตุ</u></div>
             <div class="row">
@@ -263,6 +276,11 @@
                     <b>สัมผัสระหว่างบท</b>
                     คำสุดท้ายของบทต้นสัมผัสกับคำที่ 1 หรือคำที่ 2 หรือคำที่ 3 ของบทต่อ ๆ ไป
                     จะทำให้มีความไพเราะยิ่งขึ้น
+                </li>
+
+                <li>
+                    <b>คีย์ลัด</b>
+                    กดปุ่มเว้นวรรค หรือ Enter เพื่อไปยังคำถัดไป
                 </li>
             </ul>
 
