fix miss spelling

--- a/index.html
+++ b/index.html
@@ -207,7 +207,6 @@
         </div>
 
         <div class="row section-separator"></div>
-
         <pre id="result"></pre>
 
         <div class="row pt-3">
@@ -266,10 +265,9 @@
 
                 <li>
                     <b>คำเอกโทษ-คำโทโทษ</b>
-                    สามารถใช้คำพ้องเสียงที่มีวรรณยุกต์ตรงตามตำแหน่งที่บังคับได้ แต่อาจทำมห้ความหมายผิดเพี้ยนไป เช่น ใช้
-                    "เหล้า" แทน
-                    "เล่า"
-                    ในตำแหน่งวรรณยุกต์โท หรือใช้ "ท่า" แทน "ถ้า" ในตำแหน่งวรรณยุกต์เอก
+                    สามารถใช้คำพ้องเสียงที่มีวรรณยุกต์ตรงตามตำแหน่งที่บังคับได้ แต่อาจทำให้ความหมายผิดเพี้ยนไป 
+                    เช่น ใช้ "เหล้า" แทน "เล่า" ในตำแหน่งวรรณยุกต์โท 
+                    หรือใช้ "ท่า" แทน "ถ้า" ในตำแหน่งวรรณยุกต์เอก
                 </li>
 
                 <li>
